k8s/pluto/worker-1/service.yml
apiVersion: v1
kind: Service
metadata:
  name: worker-1
  namespace: pluto
  labels:
    app: worker-1
spec:
  selector:
    app: worker-1
  ports:
  - name: mail
    port: 20001
    targetPort: 20001
  - name: sync
    port: 30001
    targetPort: 30001
