k8s/pluto/worker-1/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.global-static-ip-name: federation
  name: worker-1
  namespace: pluto
spec:
  backend:
    serviceName: worker-1
    servicePort: 31000
